--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,7 +8,7 @@
         <filter-class>com.gp.filter.AccessController</filter-class>
         <init-param>
             <param-name>Encoding</param-name>
-            <param-value>utf-8</param-value>
+            <param-value>UTF-8</param-value>
         </init-param>
     </filter>
     <filter-mapping>
